Change in PCGen core: new Integer() calls to Integer.valueOf() new Integer().intValue() to Integer.parseInt() Integer does not require deep copy in clone() - Integer is immutable Refactor out use of Integer when only intValue() is called - use int
git-svn-id: svn+ssh://svn.code.sf.net/p/pcgen/code/Trunk@1513 ef53c05b-3124-4d59-ae7d-fe3273f42be7